<resources>
    <string name="app_name">navi_ga</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
<!--    <string name="action_settings">Settings</string>-->

    <string name="menu_home">Trang chủ</string>
    <string name="menu_gallery">Thực đơn </string>
    <string name="menu_slideshow">Nhân viên</string>
    <string name="menu_statistical">Thống kê</string>
    <string name="menu_setting">Cài đặt</string>

</resources>